# z-image-turbo

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/commands/: bug.md  prime_cc.md  prime_diffusers.md  quick-plan.md
ai_docs/: dynamic_prompts.md
ai_docs/claude_code/: slash_commands.md
ai_docs/diffusers/: common_errors.md  controlnet.md  installation.md  lora.md  mac_m2_optimization.md  model_cache_directory.md  model_download.md  overview.md  pipeline_core.md  progress_bar.md  schedulers.md  training_lora.md  z_image_pipeline.md
ai_docs/diffusers/sample_code/: z_image_pipe.py
ai_docs/pydantic_ai/: llm.txt
specs/: bug-black-image-mps.md  bug-sanitize-removes-chinese.md  chore-enhance-resolution-help.md  chore-force-mps-and-warnings.md  chore-graceful-ctrl-c.md  chore-migrate-template-file.md  chore-prompt-enhancement-stats.md  chore-windows-cuda-support.md  feature-custom-instruction-file.md  feature-grok-llm-provider.md  feature-interactive-mode.md  feature-prompts-from-file.md  feature-template-format-string.md  migrate-generate-prompts.md  z-image-turbo-generator.md
src/generate_prompts/: __init__.py  __main__.py  cli.py  generator.py
src/generate_prompts/instructions/: default_instruction.txt
src/generate_prompts/templates/: default_template.json  marvel_template.json  miss_universe_template.json
src/z_image/: __init__.py  __main__.py  cli.py  downloader.py  generator.py
tests/: test_cli.py  test_generate_prompts.py
